# IMS-Simulator

./: .gitignore  README.md  install_package.py  pyproject.toml  requirements.txt  setup.py  test_library.db
apps/: __init__.py  app_free.py  app_pro.py  import_helper.py
apps/db/: imspro.sqlite
data/: starter_library.csv
db/: imspro.sqlite
imsim/: __init__.py  calibrate.py  library.py  licensing.py  ml.py  physics.py  schemas.py  sim.py  utils.py  viz.py  viz_new.py
models/: k0_reg.joblib
tests/: test_basic.py
