[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-physics"
version = "0.1.0"
description = "IMS Physics Pro - Free and Pro tiers for ion mobility spectrometry simulation and analysis"
authors = [{name = "IMS Physics Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["imsim*"]